--- a/app/assets/javascripts/main.js.erb
+++ b/app/assets/javascripts/main.js.erb
@@ -1,7 +1,9 @@
 console.log('main.js loaded');
 
 var $main,
+    $title,
     $mainSearch,
+    $randomSearch,
     $display,
     $categoryTemplate,
     $placeTemplate,
@@ -10,6 +12,8 @@ var $main,
     $notesTemplate,
     $noteDisplayTemplate,
     $noteEditTemplate,
+    $wolframTemplate,
+    $panoramioTemplate,
     $favorites,
     $favoritesList,
     $removeFromFavorite,
@@ -20,229 +24,89 @@ var $main,
     renderNotesForm,
     renderNote,
     renderEditNote,
-    currentDestinationId;
+    renderWolfram,
+    renderPanoramio,
+    currentDestinationId,
+    searchLocation;
 
-addDisplayDiv = function(location) {
-  return $(renderDisplayDiv({location: _.capitalize(location)})).appendTo($main);
-}
-
-addCategory = function($displayEl, name) {
-  var $attachEl = $displayEl[4];
-  return $(renderCategory({name: name, title: _.capitalize(name.replace('_', ' '))}))
-   .appendTo($attachEl);
-}
-
-addPlace = function($categoryEl, gid, name, src, rating) {
-  var $attachEl = $categoryEl.find('ul');
-  $(renderPlace({gid: gid, name: name, src: src, rating: rating}))
-   .appendTo($attachEl);
-}
-
-addFavorite = function(id, location) {
-  $(renderFavorite({id: id, location: location})).appendTo($favoritesList);
-  addNoteForm(id);
-
-  $('.remove').click(function(){
-    var $id = $(this).parent().attr('data-destination-id');
-    var $li = $(this).parent();
-
-    // warning to ensure that the user meant to delete
-    deleteFromFavorites($id, $li)
-
-  })
-}
-
-addNoteForm = function(id) {
-  $(renderNotesForm({id: id})).appendTo($main);
-  $('#save-note').click(function(e){
-    e.preventDefault();
-    var $destination_id = $('#destination-id-input').val();
-    var $noteTitle = $('#note-title').val();
-    var $noteBody = $('#note-body').val();
-    $.ajax({
-      url:      '/notes',
-      type:     'post',
-      dataType: 'json',
-      data:     {note: {title: $noteTitle, body: $noteBody, destination_id: $destination_id}}
-    }).done(function(data){
-      console.log(data);
-      addNote([data]);
-    });
-  });
-}
-
-addNote = function(data){
-  for (var i=0,len=data.length; i<len; i++){
-    var title  = data[i].title,
-        date   = data[i].created_at,
-        body   = data[i].body,
-        noteId = data[i].id;
-    $(renderNote({title: title, date: date, body: body, note_id: noteId})).appendTo($('.note-part'));
-  }
-  // add event listener on buttons to edit and delete
-  $('.edit-note-button').click(function(){
-    var $noteId = $(this).parent().attr('data-note-id'),
-        $title  = $(this).parent().children().first().text(),
-        $body   = $(this).parent().children('p').text();
-
-    editNote($noteId, $title, $body);
-  })
-
-  // delete
-  $('.delete-note-button').click(function(){
-    var $note = $(this).parent();
-    var $noteId = $note.attr('data-note-id');
-
-    // $.ajax({
-    //     url: '/notes/' + $noteId,
-    //     type: 'delete'
-    //   }).done(function(data){
-    //     $note.remove();
-    //     // swal("Deleted!", "Your note has been deleted.", "success");
-    //   })
-    swal({
-      title: "Are you sure?",
-      text: "You will not be able to recover this note!",
-      type: "warning",
-      showCancelButton: true,
-      confirmButtonColor: "#DD6B55",
-      confirmButtonText: "Yes, delete it!",
-      closeOnConfirm: false
-    }, function(){
-      $.ajax({
-        url: '/notes/' + $noteId,
-        type: 'delete'
-      }).done(function(data){
-        $note.remove();
-        swal("Deleted!", "Your note has been deleted.", "success");
-      })
-    });
-  })
-}
-
-editNote = function($noteId, $title, $body){
-  var $currentNote = $('[data-note-id="' + $noteId + '"]');
-  $currentNote.children().hide();
-  $(renderEditNote({title: $title, body: $body})).appendTo($currentNote);
-    // note update event listener functionality
-    $('#update-note').click(function(e){
-      e.preventDefault();
-      var $newTitle = $('#edit-title').val(),
-          $newBody  = $('#edit-body').val();
-      $.ajax({
-        url:      '/destinations/' + currentDestinationId + '/notes/' + $noteId,
-        type:     'put',
-        dataType: 'json',
-        data:     {note: {title: $newTitle, body: $newBody}}
-      }).done(function(data){
-        $currentNote.children().first().text(data.title);
-        $currentNote.children('p').text(data.body);
-        $currentNote.children().show();
-        $('#note-edit-form').remove();
-      })
-
-    })
-    $('.cancel-note-edit').click(function(e){
-      e.preventDefault();
-      $currentNote.children().show();
-      $('#note-edit-form').remove();
-    })
-}
-
-// generates google's link to specific picture
-createPhotoUrl = function(photo_reference) {
-  return 'https://maps.googleapis.com/maps/api/place/photo?maxwidth=100&photoreference=' + photo_reference + '&key=<%= ENV["GOOGLE_BROWSER_API_KEY"] %>'
-}
+// I don't think I need this anymore!!!!!!!!!!!!!!!!!!
+// addDisplayDiv = function(location) {
+//   return $(renderDisplayDiv({location: _.capitalize(location)})).appendTo($main);
+// }
 
 // a user searches for a location, either through favorites or new search.
 // this retrieves te info from the google place api
 requestInfoAboutPlace = function(searchLocation) {
-      $.ajax({
-      url:      '/destinations',
-      dataType: 'json',
-      type:     'get',
-      data:     {location: searchLocation}
-    }).success(function(data){
-      var $category;
-      // calls method to create a div for the searched data
-      var $displayEl = addDisplayDiv(searchLocation);
+  $.ajax({
+    url:      '/destinations',
+    type:     'get',
+    dataType: 'json',
+    data:     {location: searchLocation}
+  }).success(function(data){
+    applyInfoToDom(data)
 
-      // creates categories and displays data within
-      for (var category in data) {
-        $category  = addCategory($displayEl, category);
-
-        var name, photos;
-        for (var i=0,len=data[category].length;i<len;i++) {
-          gid    = data[category][i].id
-          name   = data[category][i].name
-          photos = data[category][i].photos
-          rating = data[category][i].rating
-
-          photos = _.map(photos, function(photo) {
-            return photo.photo_reference;
-          });
-
-          addPlace($category, gid, name, createPhotoUrl(photos[0]), rating);
-        }
-      }
-      // adds functionality to the favorites button (adds location to database and dom)
-      $('#add-location-button').click(function(){
-        var location = $(this).attr('class');
-        $.ajax({
-          url:      '/destinations',
-          type:     'post',
-          dataType: 'json',
-          data:     {destination: {location: location}}
-        }).success(function(data){
-          console.log(data)
-          // debugger
-          var newest_location = data[data.length - 1];
-          var id              = newest_location.id;
-          var location        = newest_location.location;
-          addFavorite(id, location);
-
-        })
-      })
-
-    }).error(function(error){
-      sweetAlert("Oops...", "Something went wrong!", "error");
-      console.log("Status Code: "+error.status);
-      console.log("Status Text: "+error.statusText);
-    })
+  }).error(function(error){
+    sweetAlert("Oops...", "Something went wrong!", "error");
+    console.log("Status Code: "+error.status);
+    console.log("Status Text: "+error.statusText);
+  })
 }
 
-var deleteFromFavorites = function($id, $li){
-  swal({
-  title: "Are you sure you want to delete this destination?",
-  text: "You will not be able to recover the data you have saved to it!",
-  type: "warning",
-  showCancelButton: true,
-  confirmButtonColor: "#DD6B55",
-  confirmButtonText: "Yes, delete it!",
-  cancelButtonText: "No, cancel!",
-  closeOnConfirm: false,
-  closeOnCancel: false },
-  function(isConfirm){
-    if (isConfirm) {
-      // removes favorite location from db
-      $.ajax({
-        url:      '/destinations/' + $id,
-        type:     'delete',
-        dataType: 'json',
-      }).done(function(){
-        // removes favorite location from dom
-        $li.remove();
-        swal("Deleted!", "Your destination has been deleted.", "success");
-      })
-    } else {
-      swal("Cancelled", "Your favorited destination is safe :)", "error");
+applyInfoToDom = function(data){
+  var $category;
+  // TODO: optimize for speed
+   // window.basicInfo           = data.wolfram_data.queryresult.pod[0].subpod.plaintext;
+   // window.wolframMap          = data.wolfram_data.queryresult.pod[4].subpod.img.src;
+   // window.populationInfo      = data.wolfram_data.queryresult.pod[6].subpod.plaintext;
+   // window.populationGrowthImg = data.wolfram_data.queryresult.pod[7].subpod.img.src;
+
+   // TODO: optimize for speed
+  // calls method to display Wolfram Info
+  // addWolframInfo(basicInfo, wolframMap, populationInfo, populationGrowthImg);
+  var panoramioDataPhotos = data.panoramio_pics.photos;
+  // creates a for loop for the panoramio pictures to be appended to the DOM
+  for (var i=0, len=panoramioDataPhotos.length; i<len; i++){
+    var $photoUrl     = panoramioDataPhotos[i].photo_url,
+        $ownerName    = panoramioDataPhotos[i].owner_name,
+        $photoTitle   = panoramioDataPhotos[i].photo_title,
+        $photoFileUrl = panoramioDataPhotos[i].photo_file_url,
+        $date         = panoramioDataPhotos[i].upload_date;
+
+    addPaniramioPhoto($photoTitle, $ownerName, $photoUrl, $photoFileUrl, $date)
+  }
+
+  // calls method to create a div for the searched data
+  // var $displayEl = addDisplayDiv(searchLocation);
+  var googleData = data.google_data;
+  // creates categories and displays data within
+  for (var category in googleData) {
+    $category  = addCategory($main, category);
+
+    var name, photos;
+    for (var i=0,len=googleData[category].length;i<len;i++) {
+      gid    = googleData[category][i].id
+      name   = googleData[category][i].name
+      photos = googleData[category][i].photos
+      rating = googleData[category][i].rating
+
+      photos = _.map(photos, function(photo) {
+        return photo.photo_reference;
+      });
+
+      addPlace($category, gid, name, createPhotoUrl(photos[0]), rating);
     }
-  });
+  }
+  // adds functionality to the favorites button (adds location to database
+  $('#add-location-button').click(addLocationToFavorites);
 }
+
+
 
 $(document).ready(function(){
   $main                = $('.main');
+  $title               = $('#title');
   $mainSearch          = $('.location-search');
+  $randomSearch        = $('#random-search')
   $display             = $('.display');
   $categoryTemplate    = $('#gplaces-category');
   $placeTemplate       = $('#gplaces-place');
@@ -251,9 +115,13 @@ $(document).ready(function(){
   $notesTemplate       = $('#notes-form-template');
   $noteDisplayTemplate = $('#note-display-template');
   $noteEditTemplate    = $('#edit-note-template');
+  $wolframTemplate     = $('#wolfram-info-template');
+  $panoramioTemplate   = $('#panoramio-template');
   $favorites           = $('.favorites');
   $favoritesList       = $('.favorites-list');
   $removeFromFavorite  = $('.remove');
+  $generalInfo         = $('.general-info')
+  renderTitle          = _.template($title.html());
   renderCategory       = _.template($categoryTemplate.html());
   renderPlace          = _.template($placeTemplate.html());
   renderDisplayDiv     = _.template($displayTemplate.html());
@@ -261,6 +129,11 @@ $(document).ready(function(){
   renderNotesForm      = _.template($notesTemplate.html());
   renderNote           = _.template($noteDisplayTemplate.html());
   renderEditNote       = _.template($noteEditTemplate.html());
+  renderWolfram        = _.template($wolframTemplate.html());
+  renderPanoramio      = _.template($panoramioTemplate.html());
+
+  // materialize navigational panel slide out
+  $(".button-collapse").sideNav();
 
 
 
@@ -270,17 +143,36 @@ $(document).ready(function(){
     event.preventDefault();
     $('.note-part').children().remove();
     $main.children().remove();
-
-    var searchLocation = $('.location-input').val();
+    $generalInfo.children().remove();
+    searchLocation = $('.location-input').val();
+    $(renderTitle({location: searchLocation})).appendTo($generalInfo);
     // contact the database to use ruby gem to find latitude and longitude of the loacation
     requestInfoAboutPlace(searchLocation);
-
   })
 
-  // a user can add a location to his favorites
+  // a user can search for a random location if he just wants to explore the possibilities
+  $randomSearch.click(function(){
+    $.ajax({
+      url:      '/destinations',
+      type:     'get',
+      dataType: 'json'
+    }).done(function(data){
+      searchLocation = data.searchLocation;
+      $generalInfo.children().remove();
+      $(renderTitle({location: searchLocation})).appendTo($generalInfo);
+      applyInfoToDom(data);
+
+    }).error(function(error){
+      sweetAlert("Oops...", "Something went wrong!", "error");
+      console.log("Status Code: "+error.status);
+      console.log("Status Text: "+error.statusText);
+    })
+  })
+
+  // a user can look at his saved favorites his favorites
   $favorites.click(function(){
     var $id            = $(this).parent().attr('data-destination-id');
-    var searchLocation = $(this).text();
+    searchLocation = $(this).text();
     $main.children().remove();
     // retrieve notes and additional information about the saved location
     $.ajax({
@@ -289,8 +181,11 @@ $(document).ready(function(){
       type:     'get'
     }).done(function(data){
       currentDestinationId = $id;
-      addNoteForm($id);
+      $('.note-part').children().remove();
+      $generalInfo.children().remove();
+      $(renderTitle({location: searchLocation})).appendTo($generalInfo);
       addNote(data);
+      addNoteForm($id);
       requestInfoAboutPlace(searchLocation);
     });
 
