--- a/app/views/destinations/index.html.erb
+++ b/app/views/destinations/index.html.erb
@@ -1,47 +1,51 @@
-<div class="nav">
-  <%= link_to "Logout", session_path(session[:user_id]), method: "delete" %>
-  <%= link_to "Edit Profile", edit_user_path(session[:user_id]), method: "get" %>
+<div class="row">
+
+  <div class="col s3">
+        <!-- Grey navigation panel -->
+    <div class="left-part">
+      <h5>My Favorite Destinations:</h5>
+      <ul class="favorites-list collection">
+        <% @destinations.each do |des| %>
+          <a data-destination-id="<%= des.id %>" class="collection-item">
+            <span class="favorites"><%= des.location %></span>
+            <span class="remove right"><i class="mdi-action-highlight-remove"></i></span>
+          </a>
+        <% end %>
+      </ul>
+    </div>
+  </div>
+
+  <div class="col s9">
+        <!-- Teal page content  -->
+    <div class="box">
+      <div class="top-part">
+        <h1>Hello <%= @user.fname %>!</h1>
+
+        <form class="location-search">
+          <label>Search by location
+            <input type="text" name="location" class="location-input", placeholder="City, State/Country" value="Brooklyn, NY">
+          </label>
+          <input type="submit" name="Search" class="location-search-button btn waves-light" value="Search">
+        </form>
+        <button id="random-search" class="btn waves-light">Explore new Places!</button>
+      </div>
+
+      <div class="general-info"></div>
+      <div class="note-part"></div>
+      <div class="images"></div>
+      <div class="main"></div>
+
+    </div>
+  </div>
+
 </div>
 
-<div class="box">
-  <div class="top-part">
-    <h1>Hello <%= @user.fname %>!</h1>
-
-    <form class="location-search">
-      <label>Search by location
-        <input type="text" name="location" class="location-input", placeholder="City, State/Country" value="Brooklyn, NY">
-      </label>
-      <input type="submit" name="Search" class="location-search-button" value="Search">
-    </form>
-  </div>
-
-  <div class="left-part">
-    <h3>My Favorite Destinations:</h3>
-    <ul class="favorites-list">
-      <% @destinations.each do |des| %>
-        <li data-destination-id="<%= des.id %>">
-          <p class="favorites"><%= des.location %></p>
-          <span class="remove">&times;</span>
-        </li>
-      <% end %>
-    </ul>
-  </div>
-
-  <div class="note-part">
-
-  </div>
-
-
-  <div class="main">
-
-
-  </div>
-
-</div>
+<script id="title" type="text/template">
+  <h2>Showing Results for <%%= location %></h2>
+  <button class="<%%= location %> btn waves-light" id="add-location-button">Add Destination to Favorites</button>
+</script>
 
 <script id="outline" type="text/template">
-  <h2>Showing Results for <%%= location %></h2>
-  <button class="<%%= location %>" id="add-location-button">Add Destination to Favorites</button>
   <div class="display"></div>
 </script>
 
@@ -66,41 +70,103 @@
 </script>
 
 <script id="favorites-template" type="text/template">
-  <li data-destination-id="<%%= id %>">
-    <p class="favorites"><%%= location %></p>
-    <span class="remove">&times;</span>
-  </li>
+  <a data-destination-id="<%%= id %>" class="collection-item">
+    <span class="favorites"><%%= location %></span>
+    <span class="remove right"><i class="mdi-action-highlight-remove"></i></span>
+  </a>
 </script>
 
+
 <script id="notes-form-template" type="text/template">
-  <form id="note-form">
-    <input type="text" name="title" id="note-title"><br>
-    <textarea name="body" rows="5" columns="10" id="note-body"></textarea><br>
-    <input name="destination_id" type="hidden" value="<%%= id %>" id="destination-id-input">
-    <input type="submit" id="save-note" value="Post">
-  </form>
+  <div class="row blue-grey-text">
+    <form id="note-form" class="col s12 m4">
+      <div class="row">
+        <div class="input-field col s12">
+          <input id="note-title" type="text" name="title">
+          <label for="note-title">Title</label>
+        </div>
+        <div class="input-field col s12">
+          <textarea name="body" rows="10" columns="10" id="note-body" class="materialize-textarea validate"></textarea>
+          <label for="note-body">Note:</label>
+        </div>
+        <input name="destination_id" type="hidden" value="<%%= id %>" id="destination-id-input">
+        <div>
+          <a class="">
+            <span id="save-note"><i class="mdi-action-done-all teal-text"></i></span>
+          </a>
+        </div>
+      </div>
+    </form>
+  </div>
 </script>
 
 <script id="note-display-template" type="text/template">
-  <div class="note" data-note-id="<%%= note_id %>">
-    <h4><%%= title %></h4>
-    <h4><%%= date %></h4>
-    <p><%%= body %></p>
-    <button class="edit-note-button">Edit</button>
-    <button class="delete-note-button">Delete</button>
+  <div class="row">
+    <div class="col s12 m4">
+      <div class="card blue-grey darken-1 note" data-note-id="<%%= note_id %>">
+        <div class="card-content white-text">
+          <span class="card-title"><%%= title %></span>
+          <h6><%%= moment(date.split('T')[0]).format('MMMM Do YYYY') %>:</h6>
+          <p><%%= body %></p>
+        </div>
+        <div class="card-action">
+          <a class="edit-note-button teal-text">Edit</a>
+          <a class="delete-note-button teal-text">Delete</a>
+        </div>
+      </div>
+    </div>
   </div>
 </script>
 
 <script id="edit-note-template" type="text/template">
-  <form id="note-edit-form">
-    <input type="text" name="title" id="edit-title" value="<%%= title %>"><br>
-    <textarea name="body" rows="5" columns="10" id="edit-body"><%%= body %></textarea><br>
-    <input type="submit" id="update-note" value="Update">
-    <button class="cancel-note-edit">Cancel</button>
-  </form>
+  <div class="row white blue-grey-text">
+    <form id="note-edit-form" class="col s12">
+      <div class="row">
+        <div class="input-field col s12">
+          <input id="edit-title" type="text" name="title" class="validate" value="<%%= title %>">
+        </div>
+        <div class="input-field col s12">
+          <textarea name="body" rows="10" columns="10" id="edit-body" class="materialize-textarea validate"><%%= body %></textarea>
+        </div>
+        <div>
+          <a class="">
+            <span id="update-note"><i class="mdi-action-done-all teal-text"></i></span>
+            <span class="cancel-note-edit"><i class="mdi-navigation-close red-text text-darken-2"></i></span>
+          </a>
+        </div>
+      </div>
+    </form>
+  </div>
+</script>
+
+<script id="wolfram-info-template" type="text/template">
+  <div id="wolfram-info">
+    <h2 class="basic-info"><%%= basicInfo %></h2>
+    <img src="<%%= wolframMap %>" alt="map">
+    <p><%%= populationInfo %></p>
+    <img src="<%%= populationChart %>" alt="chart">
+  </div>
 </script>
 
 
+<script id="panoramio-template" type="text/template">
+  <div class="row">
+    <div class="col s12 m7">
+      <div class="card">
+        <div class="card-image">
+          <img src="<%%= photoFileUrl %>" class="materialboxed">
+          <span class="card-title"><%%= ownerName %> on <%%= date %></span>
+        </div>
+        <div class="card-content">
+          <p><%%= photoTitle %></p>
+        </div>
+        <div class="card-action">
+          <a href="<%%= photoUrl %>">Click here to buy this Photo</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</script>
 
 
 
